--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "reviewers": ["team:cmo-internal"],
+  "reviewers": ["team:internal"],
   "labels": ["renovate"],
   "packageRules": [
     {
@@ -19,14 +19,6 @@
       "datasources": ["docker","helm","terraform-provider"],
       "updateTypes": ["patch","minor"],
       "automerge": true
-    }
-  ],
-  "hostRules": [
-    {
-      "matchHost": "cf-it-inop-cos-lx-docker-v.eu.artifactory.conti.de",
-      "hostType": "docker",
-      "username": "{{ secrets.ARTIFACTORY_USER }}",
-      "password": "{{ secrets.ARTIFACTORY_PW }}"
     }
   ]
 }
